--- a/custom.css
+++ b/custom.css
@@ -84,7 +84,7 @@ img{max-width:100%}
 .section9 .col-md-6 p.tieude,.section7 .col-md-6 p.tieude{text-align:center;margin-top:15px}
 .section9 .col-md-6 p.tieude span{color:#9D8137}
 .youtube-div .fluid-width-video-wrapper:after{content:'';position:absolute;left:0;top:0;width:100%;height:100%;background:url(upload/videomask.png);background-size:cover;border:none}
-.section10{background:url();background-size:cover;background-position:center;position:relative;padding-bottom: 10px}
+.section10{background:url(https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiTX-7apT4sl-ISMN65VwqrM0D6MpeygKOh3-bCyQr8VZCeKJRjrPBeU9r9gz1FatLKYr7ytwz7b61lPdqxjtm8iUgNkYBUBp6AT-6n2i88ojKAUlYIFjnKZwf2MhUFA-6BSlIcHdZybz4G9xQ43-qxwjqkCscDubf8RcxBrkA9zTq_XrI2dQUArfVv/s1600/nen.jpg);background-size:cover;background-position:center;position:relative;padding-bottom: 10px}
 .section10:before{content:'';width:100%;height:100%;background:rgba(0,0,0,0.66);left:0;top:0;position:absolute;z-index: -1;}
 .section10 .heading > h2{font-size:1.4em;margin-bottom:7px}
 .section10 .heading > p{color:#fff!important;font-size:4em}
